<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>nl.vpro.poms</groupId>
    <artifactId>poms-parent</artifactId>
    <version>7.1.2</version>
  </parent>

  <name>poms shared</name>
  <version>7.1.4</version>
  <artifactId>poms-shared-parent</artifactId>
  <packaging>pom</packaging>

  <description>Domain classes and utilities for NPO POMS projects.</description>

  <properties>
    <revision>7.1</revision>
    <changelist>-SNAPSHOT</changelist>
    <poms.shared.version>${project.version}</poms.shared.version>
    <java.version>11</java.version>
  </properties>


   <scm>
     <connection>scm:git:${project.scm.url}</connection>
     <developerConnection>scm:git:${project.scm.url}</developerConnection>
     <url>https://github.com/npo-poms/poms-shared.git</url>
     <tag>REL-7.1.4</tag>
  </scm>


  <modules>
    <module>poms-shared-domain</module>
    <module>poms-shared</module>
    <module>user-domain</module>
    <module>media-domain</module>

    <module>gtaa-domain</module>
    <module>gtaa-openskos</module>

    <module>pages-domain</module>
    <module>image-domain</module>
    <module>subtitles-domain</module>
    <module>media-odi</module>
    <module>media-rs-services</module>
    <module>pages-rs-services</module>

    <module>media-test</module>

    <module>media-classification</module>
    <module>media-organizations</module>

    <module>api-domain</module>
    <module>api-rs-services</module>
    <module>poms-npoplayer</module>

    <module>media-nep</module>
    <module>media-projectm</module>
    <module>media-nebo</module>
    <module>media-npo</module>
    <module>media-tva</module>

  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.3.0</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <append>true</append>
            </configuration>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>nl.vpro.shared</groupId>
      <artifactId>vpro-shared-log4j2</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>vpro-nexus</id>
      <distributionManagement>
        <repository>
          <id>nexus</id>
          <name>Nexus releases</name>
          <url>http://nexus.vpro.nl/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
          <id>nexus</id>
          <name>Nexus snapshots</name>
          <url>http://nexus.vpro.nl/content/repositories/snapshots</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>

  </profiles>

  <distributionManagement>
    <snapshotRepository>
      <id>vpro-ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>vpro-ossrh-release</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>
  <repositories>
     <repository>
      <id>vpro-ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
       <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
     </repository>
     <repository>
       <id>sonatype</id>
       <url>https://oss.sonatype.org/service/local/repositories/releases/content</url>
     </repository>
  </repositories>
</project>
